add black testimonials

--- a/index.html
+++ b/index.html
@@ -186,27 +186,28 @@
                 </div>
             </div>
         </section>
-        <section class="section section_padding0">
-            <div class="testimonials testimonials_fone-color">
+        <section class="section">
+            <div class="testimonials container container_flex_col">
                 <div class="testimonials__titles">
                     <h2 class="testimonials__title">Testimonials</h2>
                     <p class="testimonials__text">from happy, delighted couples</p>
                 </div>
-                <div class="testimonials__content testimonials__content_flex">
-                    <p class="testimonials__text">“</p>
-                    <div class="testimonials__text-block">
+                <div class="testimonials__content">
+                    <span class="testimonials__marks">‘‘</span>
+                    <div class="testimonials__texts">
                         <p class="testimonials__text">Lorem ipsum sit ac suspendisse adipiscing eget aliquam fermentum
                             rutrum tempus aenean. Suspendisse nascetur vulputate viverra varius eu ullamcorper. Cursus
                             pellentesque erat eget eget ullamcorper id in. Nullam scelerisque varius viverra augue quis.
-                            Laoreet eget curabitur vitae sed at facilisis purus convallis imperdiet.</p>
-                        <p class="testimonials__text">Penatibus auctor diam vivamus amet a vehicula ultrices. Volutpat
+                            Laoreet eget curabitur vitae sed at facilisis purus convallis imperdiet.
+                        </p>
+                        <p class="testimonials__text2">Penatibus auctor diam vivamus amet a vehicula ultrices. Volutpat
                             arcu in amet praesent nisl mattis etiam cras orci. Ut urna elementum sapien orci lacus!</p>
                     </div>
-                    <p class="testimonials__text">”</p>
+                    <span class="testimonials__marks">’’</span>
                 </div>
                 <div class="testimonials__images">
-                    <img class="testimonials_image" src="./images/testimonials/img_placeholder.svg" alt="Image ">
-                    <p class="testimonials_text">Joy & Jordan</p>
+                    <img class="testimonials__image" src="./images/testimonials/img_placeholder.svg" alt="Image ">
+                    <p class="testimonials__name">Joy & Jordan</p>
                 </div>
                 <button class="testimonials__button testimonials__button_position-abs-left">
                     <img class="testimonials__icon" src="./images/testimonials/Vector-left.png" alt="icon arrow">
