--- a/index.html
+++ b/index.html
@@ -159,26 +159,26 @@
                     <h4 class="portfolios__title-h4">Our portfolios</h4>
                     <div class="container container_images">
                         <div class="portfolios__images">
-                            <img class="portfolios__image"
-                                src="./images/portfolios/Joy & Jordan.svg" alt="Image Joy & Jordan">
+                            <img class="portfolios__image" src="./images/portfolios/Joy & Jordan.svg"
+                                alt="Image Joy & Jordan">
                             <p class="portfolios__text">THE WEDDING OF</p>
                             <h3 class="portfolios__title">Joy & Jordan</h3>
                         </div>
                         <div class="portfolios__images">
-                            <img class="portfolios__image"
-                                src="./images/portfolios/Dianne & Michael.svg" alt="Image Dianne & Michael">
+                            <img class="portfolios__image" src="./images/portfolios/Dianne & Michael.svg"
+                                alt="Image Dianne & Michael">
                             <p class="portfolios__text">THE WEDDING OF</p>
                             <h3 class="portfolios__title">Dianne & Michael</h3>
                         </div>
                         <div class="portfolios__images">
-                            <img class="portfolios__image"
-                                src="./images/portfolios/Gabrielle & Simon.svg" alt="Image Gabrielle & Simon">
+                            <img class="portfolios__image" src="./images/portfolios/Gabrielle & Simon.svg"
+                                alt="Image Gabrielle & Simon">
                             <p class="portfolios__text">THE WEDDING OF</p>
                             <h3 class="portfolios__title">Gabrielle & Simon</h3>
                         </div>
                         <div class="portfolios__images">
-                            <img class="portfolios__image"
-                                src="./images/portfolios/Zee & Adrian.svg" alt="Image Zee & Adrian">
+                            <img class="portfolios__image" src="./images/portfolios/Zee & Adrian.svg"
+                                alt="Image Zee & Adrian">
                             <p class="portfolios__text">THE WEDDING OF</p>
                             <h3 class="portfolios__title">Zee & Adrian</h3>
                         </div>
@@ -187,69 +187,80 @@
             </div>
         </section>
         <section class="section">
-            <div class="testimonials container container_flex_col">
-                <div class="testimonials__titles">
-                    <h2 class="testimonials__title">Testimonials</h2>
-                    <p class="testimonials__text">from happy, delighted couples</p>
-                </div>
-                <div class="testimonials__content">
-                    <span class="testimonials__marks">‘‘</span>
-                    <div class="testimonials__texts">
-                        <p class="testimonials__text">Lorem ipsum sit ac suspendisse adipiscing eget aliquam fermentum
-                            rutrum tempus aenean. Suspendisse nascetur vulputate viverra varius eu ullamcorper. Cursus
-                            pellentesque erat eget eget ullamcorper id in. Nullam scelerisque varius viverra augue quis.
-                            Laoreet eget curabitur vitae sed at facilisis purus convallis imperdiet.
-                        </p>
-                        <p class="testimonials__text2">Penatibus auctor diam vivamus amet a vehicula ultrices. Volutpat
-                            arcu in amet praesent nisl mattis etiam cras orci. Ut urna elementum sapien orci lacus!</p>
+            <div class="testimonials">
+                <div class="container container_flex_col container_size container_pos">
+                    <div class="testimonials__titles">
+                        <h2 class="testimonials__title">Testimonials</h2>
+                        <p class="testimonials__title-text">from happy, delighted couples</p>
                     </div>
-                    <span class="testimonials__marks">’’</span>
+                    <div class="testimonials__content">
+                        <div class="testimonials__marks">‘‘</div>
+                        <div class="testimonials__texts">
+                            <p class="testimonials__text">Lorem ipsum sit ac suspendisse adipiscing eget aliquam
+                                fermentum
+                                rutrum tempus aenean. Suspendisse nascetur vulputate viverra varius eu ullamcorper.
+                                Cursus
+                                pellentesque erat eget eget ullamcorper id in. Nullam scelerisque varius viverra augue
+                                quis.
+                                Laoreet eget curabitur vitae sed at facilisis purus convallis imperdiet.
+                            </p>
+                            <p class="testimonials__text2">Penatibus auctor diam vivamus amet a vehicula ultrices.
+                                Volutpat
+                                arcu in amet praesent nisl mattis etiam cras orci. Ut urna elementum sapien orci lacus!
+                            </p>
+                        </div>
+                        <div class="testimonials__marks">’’</div>
+                    </div>
+                    <div class="testimonials__images">
+                        <img class="testimonials__image" src="./images/testimonials/img_placeholder.svg" alt="Image ">
+                        <p class="testimonials__name">Joy & Jordan</p>
+                    </div>
+                    <button class="testimonials__button-left">
+                        <img class="testimonials__icon" src="./images/testimonials/Vector-left.png" alt="icon arrow">
+                    </button>
+                    <button class="testimonials__button-right">
+                        <img class="testimonials__icon" src="./images/testimonials/Vector-right.png" alt="icon arrow">
+                    </button>
                 </div>
-                <div class="testimonials__images">
-                    <img class="testimonials__image" src="./images/testimonials/img_placeholder.svg" alt="Image ">
-                    <p class="testimonials__name">Joy & Jordan</p>
-                </div>
-                <button class="testimonials__button testimonials__button_position-abs-left">
-                    <img class="testimonials__icon" src="./images/testimonials/Vector-left.png" alt="icon arrow">
-                </button>
-                <button class="testimonials__button testimonials__button_position-abs-right">
-                    <img class="testimonials__icon" src="./images/testimonials/Vector-right.png" alt="icon arrow">
-                </button>
             </div>
             <div class="contacts">
-                <div class="contacts__forms-container">
-                    <div class="contacts__titles">
-                        <h2 class="contacts__title">Contact us</h2>
-                        <p class="contacts_text">we are excited to get planning!</p>
-                    </div>
-                    <form class="contacts__form" action="#">
-                        <p class="contacts__form-title">Contact information</p>
-                        <input class="contacts__input" type="text" name="name" placeholder="name">
-                        <input class="contacts__input" type="email" name="email" placeholder="email">
-                        <input class="contacts__input" type="tel" name="phone" placeholder="phone no">
-                        <p class="contacts__form-title">Who’s getting married?</p>
-                        <input class="contacts__input" type="text" name="partner1" placeholder="partner1">
-                        <input class="contacts__input" type="text" name="partner2" placeholder="partner2">
-                        <input class="contacts__input" type="date" name="date">
-                        <input class="contacts__input" type="number" name="number-guests"
-                            placeholder="Expected number of guests">
-                        <textarea class="contacts__textarea" name="textarea" cols="30"
-                            rows="10">Tell us anything more that can help!</textarea>
-                        <button class="contacts__button">Submit</button>
-                    </form>
-                </div>
-                <div class="contacts__maps">
-                    <img class="contacts__image" src="./images/form/map.svg" alt="Image map">
-                    <img class="contacts__location" src="./images/form/location.png" alt="Image icon location">
-                    <div class="contacts__text-information">
-                        <p class="contacts__text">Head office</p>
-                        <p class="contacts__text">Via Roma, 20121 Milano (MI) Italy</p>
-                        <p class="contacts__text">Phone: +39 (0)322 221211 Mobile: +39 328 2211212</p>
-                    </div>
-                    <div class="navigation__social">
-                        <img class="navigation__social-icon" src="./images/form/icon-f.png" alt="images facebook">
-                        <img class="navigation__social-icon" src="./images/form/instagram.png" alt="images Instagram">
-                        <img class="navigation__social-icon" src="./images/form/twitter.png" alt="images twitter">
+                <div class="container container_size">
+                    <div class="contacts__content">
+                        <div class="contacts__forms">
+                            <div class="contacts__titles">
+                                <h2 class="contacts__title">Contact us</h2>
+                                <p class="contacts__text">we are excited to get planning!</p>
+                            </div>
+                            <form class="contacts__form" action="#">
+                                <p class="contacts__form-title">Contact information</p>
+                                <input class="contacts__input" type="text" name="name" placeholder="Name">
+                                <input class="contacts__input" type="email" name="email" placeholder="Email">
+                                <input class="contacts__input" type="tel" name="phone" placeholder="Phone no">
+                                <p class="contacts__form-title">Who’s getting married?</p>
+                                <input class="contacts__input" type="text" name="partner1" placeholder="Partner1">
+                                <input class="contacts__input" type="text" name="partner2" placeholder="Partner2">
+                                <input class="contacts__input" type="date" name="Date">
+                                <input class="contacts__input" type="number" name="Number-guests"
+                                    placeholder="Expected number of guests">
+                                <textarea class="contacts__textarea" name="textarea" cols="30"
+                                    rows="10">Tell us anything more that can help!</textarea>
+                                <button class="contacts__button">Submit</button>
+                            </form>
+                        </div>
+                        <div class="contacts__maps">
+                            <img class="contacts__image" src="./images/form/map.svg" alt="Image map">
+                            <img class="contacts__location" src="./images/form/location.png" alt="Image icon location">
+                            <div class="contacts__text-information">
+                                <p class="contacts__text">Head office</p>
+                                <p class="contacts__text">Via Roma, 20121 Milano (MI) Italy</p>
+                                <p class="contacts__text">Phone: +39 (0)322 221211 Mobile: +39 328 2211212</p>
+                            </div>
+                            <div class="navigation__social">
+                                <img class="navigation__social-icon" src="./images/form/icon-f.png" alt="images facebook">
+                                <img class="navigation__social-icon" src="./images/form/instagram.png" alt="images Instagram">
+                                <img class="navigation__social-icon" src="./images/form/twitter.png" alt="images twitter">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
