finish block contacts

--- a/index.html
+++ b/index.html
@@ -250,11 +250,12 @@
                         <div class="contacts__maps">
                             <img class="contacts__image" src="./images/form/map.svg" alt="Image map">
                             <img class="contacts__location" src="./images/form/location.png" alt="Image icon location">
-                            <div class="contacts__text-information">
-                                <p class="contacts__text">Head office</p>
-                                <p class="contacts__text">Via Roma, 20121 Milano (MI) Italy</p>
-                                <p class="contacts__text">Phone: +39 (0)322 221211 Mobile: +39 328 2211212</p>
+                            <div class="contacts__info">
+                                <p class="contacts__text-title">Head office</p>
+                                <p class="contacts__text">Via Roma,<br /> 20121 Milano (MI) <br /> Italy</p>
+                                <p class="contacts__text">Phone: +39 (0)322 221211 <br /> Mobile: +39 328 2211212</p>
                             </div>
+                            <p class="contacts__text-title">Follow us</p>
                             <div class="navigation__social">
                                 <img class="navigation__social-icon" src="./images/form/icon-f.png" alt="images facebook">
                                 <img class="navigation__social-icon" src="./images/form/instagram.png" alt="images Instagram">
