finish footer, add readme

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img class="navigation__logo" src="./images/header/logo.png" alt="image logo">
             <nav class="navigation__menu navigation__menu_flex">
                 <div class="navigation__links">
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Browse</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Services</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Testimonials</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Contact us</a>
+                    <a class="navigation__link navigation__link_col_wh" href="#">Browse</a>
+                    <a class="navigation__link navigation__link_col_wh" href="#">Services</a>
+                    <a class="navigation__link navigation__link_col_wh" href="#">Testimonials</a>
+                    <a class="navigation__link navigation__link_col_wh" href="#">Contact us</a>
                 </div>
                 <div class="navigation__socials">
                     <img class="navigation__social-icon" src="./images/header/facebook.png" alt="images facebook">
@@ -91,7 +91,7 @@
             <div class="container container_flex_col">
                 <div class="featured ">
                     <h4 class="featured__title-h4">Featured venues</h4>
-                    <div class="featured__details container_flex container_size">
+                    <div class="featured__details container container_flex container_size">
                         <div class="featured__image"></div>
                         <div class="featured__content">
                             <p class="featured__pages">
@@ -257,9 +257,12 @@
                             </div>
                             <p class="contacts__text-title">Follow us</p>
                             <div class="navigation__social">
-                                <img class="navigation__social-icon" src="./images/form/icon-f.png" alt="images facebook">
-                                <img class="navigation__social-icon" src="./images/form/instagram.png" alt="images Instagram">
-                                <img class="navigation__social-icon" src="./images/form/twitter.png" alt="images twitter">
+                                <img class="navigation__social-icon" src="./images/form/icon-f.png"
+                                    alt="images facebook">
+                                <img class="navigation__social-icon" src="./images/form/instagram.png"
+                                    alt="images Instagram">
+                                <img class="navigation__social-icon" src="./images/form/twitter.png"
+                                    alt="images twitter">
                             </div>
                         </div>
                     </div>
@@ -267,23 +270,21 @@
             </div>
         </section>
     </main>
-    <footer class="footer footer_color">
-        <div class="navigation">
-            <img class="navigation__logo" src="./images/header/logo.png" alt="image logo">
-            <nav class="navigation__menu navigation__menu_flex">
-                <div class="navigation_links">
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">About us</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Terms of Service</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">Privacy Policy</a>
-                    <a class="navigation__link navigation__link_colored-border-padding" href="#">FAQ</a>
-                </div>
-                <div class="navigation__social">
-                    <img class="navigation__social-icon" src="./images/header/facebook.png" alt="images facebook">
-                    <img class="navigation__social-icon" src="./images/header/instagram.png" alt="images Instagram">
-                    <img class="navigation__social-icon" src="./images/header/twitter.png" alt="images twitter">
-                </div>
-            </nav>
-        </div>
+    <footer class="footer navigation">
+        <nav class="footer__nav footer__nav_flex">
+            <img class="footer__logo" src="./images/header/logo.png" alt="image logo">
+            <div class="navigation__links navigation__links_footer_fl">
+                <a class="navigation__link navigation__link_col_nat" href="#">About us</a>
+                <a class="navigation__link navigation__link_col_nat" href="#">Terms of Service</a>
+                <a class="navigation__link navigation__link_col_nat" href="#">Privacy Policy</a>
+                <a class="navigation__link navigation__link_col_nat" href="#">FAQ</a>
+            </div>
+            <div class="navigation__social">
+                <img class="navigation__social-icon" src="./images/header/facebook.png" alt="images facebook">
+                <img class="navigation__social-icon" src="./images/header/instagram.png" alt="images Instagram">
+                <img class="navigation__social-icon" src="./images/header/twitter.png" alt="images twitter">
+            </div>
+        </nav>
     </footer>
     <script src="./main.js"></script>
 </body>
