change name foto

--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
                             </div>
                             <form class="contacts__form" action="#">
                                 <p class="contacts__form-title">Contact information</p>
-                                <input class="contacts__input" type="text" name="name" placeholder="Name">
-                                <input class="contacts__input" type="email" name="email" placeholder="Email">
-                                <input class="contacts__input" type="tel" name="phone" placeholder="Phone no">
+                                <input class="contacts__input" type="text" name="name" placeholder="Name" autocomplete="name">
+                                <input class="contacts__input" type="email" name="email" placeholder="Email" autocomplete="email">
+                                <input class="contacts__input" type="tel" name="phone" placeholder="Phone no" autocomplete="tel">
                                 <p class="contacts__form-title">Who’s getting married?</p>
-                                <input class="contacts__input" type="text" name="partner1" placeholder="Partner1">
-                                <input class="contacts__input" type="text" name="partner2" placeholder="Partner2">
+                                <input class="contacts__input" type="text" name="partner1" placeholder="Partner1" autocomplete="name">
+                                <input class="contacts__input" type="text" name="partner2" placeholder="Partner2" autocomplete="name">
                                 <input class="contacts__input" type="date" name="Date">
                                 <input class="contacts__input" type="number" name="Number-guests"
                                     placeholder="Expected number of guests">
